
2015-11-01  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* general: skip tests that need a curses build if not available
	* general: use new internal shell function _return_path for resolving paths
	  (necessary for use of paths in testsuite when testing non-cygwin builds
	  with cygwin)
	* atlocal_win: set tests to skip (via COB_HAS_ISAM / COB_HAS_CURSES)
	  depending on available features (parsing cobc --info)

22015-10-25  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* testsuite.src/configuration.at: mayor update including runtime
	  configuration

2015-08-03  Brian Tiffin <btiffin@gnu.org>

	* testsuite.src/run_misc.at: compile from stdin, run after compile

2015-05-11  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* testsuite.src/run_functions.at : revised all tests from ACOS to LENGTH

2015-04-27  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* testsuite.src/run_file.at : (new) moved testsuite entries for
	  file handling to their own test definition (origin: run_misc.at)

2015-03-19  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* testsuite.src/syn_functions.at : (new) moved testsuite entries for
	  FUNCTIONs to their own test definition (origin: syn_misc.at)

2015-03-14  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* atlocal.in, atlocal_win: Added setting of COB_RUNTIME_CONFIG
	* moved tests for checking used binaries (cobc, cobcrun, extras) from
	  testsuite.src/run_misc.at to testsuite.src/used_binaries.at
	* moved tests for checking compiler configuration from
	  testsuite.src/syn_misc.at to testsuite.src/configuration.at, updated
	  tests and added new ones

2014-12-01  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* testsuite.src/syn_screen.at : (new) Added first testsuite entries for
	  SCREEN section

2014-09-12  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* support spaces in testsuite