@@ -167,3 +167,56 @@ AT_CHECK([$COMPILE -fsign=ebcdic -o prog prog.cob], [0], , [])
 AT_CHECK([./prog], [0], [{ABCDEFGHI}JKLMNOPQR])
 
 AT_CLEANUP
+
+AT_SETUP([DISPLAY: unsigned])
+AT_KEYWORDS([display])
+
+AT_DATA([prog.cob], [
+       IDENTIFICATION   DIVISION.
+       PROGRAM-ID.      prog.
+       DATA             DIVISION.
+       WORKING-STORAGE  SECTION.
+       01 X-BCU         BINARY-CHAR   UNSIGNED.
+       01 X-BSU         BINARY-SHORT  UNSIGNED.
+       01 X-BIU         BINARY-INT    UNSIGNED.
+       01 X-BLU         BINARY-LONG   UNSIGNED.
+       01 X-BDU         BINARY-DOUBLE UNSIGNED.
+       01 X-US          UNSIGNED-SHORT.
+       01 X-UI          UNSIGNED-INT.
+       PROCEDURE        DIVISION.
+           MOVE 127 TO X-BCU.               DISPLAY X-BCU END-DISPLAY.  
+           ADD 1 TO X-BCU END-ADD.          DISPLAY X-BCU END-DISPLAY.  
+           MOVE 32767 TO X-BSU.             DISPLAY X-BSU END-DISPLAY.  
+           ADD 1 TO X-BSU END-ADD.          DISPLAY X-BSU END-DISPLAY.  
+           MOVE 2147483647 TO X-BIU.        DISPLAY X-BIU END-DISPLAY.  
+           ADD 1 TO X-BIU END-ADD.          DISPLAY X-BIU END-DISPLAY.  
+           MOVE 2147483647 TO X-BLU.        DISPLAY X-BLU END-DISPLAY.  
+           ADD 1 TO X-BLU END-ADD.          DISPLAY X-BLU END-DISPLAY.  
+           MOVE 9223372036854775807 TO X-BDU. DISPLAY X-BDU END-DISPLAY.
+           ADD 1 TO X-BDU END-ADD.          DISPLAY X-BDU END-DISPLAY.  
+           MOVE 32767 TO X-US.              DISPLAY X-US  END-DISPLAY.  
+           ADD 1 TO X-US END-ADD.           DISPLAY X-US  END-DISPLAY.  
+           MOVE 2147483647 TO X-UI.         DISPLAY X-UI  END-DISPLAY.  
+           ADD 1 TO X-UI END-ADD.           DISPLAY X-UI  END-DISPLAY.  
+           STOP RUN.
+])
+
+AT_CHECK([$COMPILE -o prog prog.cob], [0], , [])
+AT_CHECK([./prog], [0],
+[127
+128
+32767
+32768
+2147483647
+2147483648
+2147483647
+2147483648
+09223372036854775807
+09223372036854775808
+32767
+32768
+2147483647
+2147483648
+])
+
+AT_CLEANUP
